--- a/client/src/app/pages/profile/user-profile/my-profile/my-profile.component.html
+++ b/client/src/app/pages/profile/user-profile/my-profile/my-profile.component.html
@@ -11,7 +11,8 @@
       <mat-icon>menu</mat-icon>
     </div>
     <a *ngIf="!editMode && currentPage === 'profile'" (click)="onClickEdit()">Edit Profile</a>
-    <a *ngIf="editMode && currentPage === 'profile'" [class.disabled]="!headerFormValid" (click)="onClickUpdate()">Update Changes</a>
+    <a *ngIf="!editMode && currentPage === 'template'" (click)="onClickEdit()">Edit Template</a>
+    <a *ngIf="editMode && (currentPage === 'profile' || currentPage === 'template')" [class.disabled]="(currentPage === 'profile' && !headerFormValid)" (click)="onClickUpdate()">Update Changes</a>
     <a *ngIf="!editMode && currentPage === 'contacts'" (click)="navigateToIncomingRequests()">Incoming Requests</a>
     <a *ngIf="!editMode && currentPage === 'incoming-requests'" (click)="navigateToContacts()">Contacts</a>
   </legend>
