--- a/client/src/app/pages/profile/user-profile/template-section/template-section.component.scss
+++ b/client/src/app/pages/profile/user-profile/template-section/template-section.component.scss
@@ -7,6 +7,11 @@
   padding-bottom: 80px;
   border-radius: 5px;
   background-color: transparent;
+  .loading {
+    width: 100%;
+    height: 100%;
+    @include flex(column, center, center);
+  }
   :nth-child(4) {
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
