--- a/client/src/app/pages/profile/user-profile/template-section/template-section.component.scss
+++ b/client/src/app/pages/profile/user-profile/template-section/template-section.component.scss
@@ -67,6 +67,9 @@
       margin-bottom: 10px;
       font-size: 16px;
       line-height: 24px;
+      &.response {
+        color: map-get($md-cfaccent, 500);
+      }
     }
     &.edit-mode {
       border-bottom: none;
