--- a/client/src/app/pages/profile/create-profile/create-profile.component.html
+++ b/client/src/app/pages/profile/create-profile/create-profile.component.html
@@ -594,10 +594,129 @@
   </div>
   
   <!-- Create_Profile_Links end -->
+
+  <!-- Add application template start -->
+
+  <div *ngIf="selectedPageIndex===9 && workAuth && militaryService && militaryService.military_status && criminalHistories" class="container {{profileCreationPages[9]}}">
+    <div class="container__full">
+      <div class="profile-form">
+        <h3 class="application__title">
+          APPLICATION TEMPLATE
+        </h3>
+        <div class="row">
+          <h3>Work Authorization</h3>
+          <p>Are you authorized to work in the United States</p>
+          <div class="profile-form__field proof-auth">
+            <mat-form-field class="bg-transparent" appearance="fill">
+              <mat-label>Select Options</mat-label>
+              <mat-select (selectionChange)="workAuthValueChanged($event)" [value]="workAuth.work_auth === 1 ? 'Yes' : 'No'">
+                <mat-option value="Yes">Yes</mat-option>
+                <mat-option value="No">No</mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+          <p>What type of authorization do you maintain (if applicable)?</p>
+          <div class="profile-form__field proof-auth">
+            <mat-form-field class="bg-transparent" appearance="fill">
+              <mat-label>Authorization Type</mat-label>
+              <mat-select (selectionChange)="proofAuthTypeChanged($event)" [value]="workAuth.proof_auth ? workAuth.proof_auth : 'None'">
+                <mat-option value="None">None</mat-option>
+                <mat-option *ngFor="let option of proof_auth_options" value="{{option}}">{{option}}</mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+          <p>Will you ever require support to acquire a work visa or a U.S citizenship?</p>
+          <div class="profile-form__field proof-auth">
+            <mat-form-field class="bg-transparent" appearance="fill">
+              <mat-label>Select Options</mat-label>
+              <mat-select (selectionChange)="visaSupportValueChanged($event)" [value]="workAuth.visa_support === 1 ? 'Yes' : 'No'">
+                <mat-option value="Yes">Yes</mat-option>
+                <mat-option value="No">No</mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+        </div>
+
+        <div class="row">
+          <h3>Military Service</h3>
+          <ng-container *ngIf="true; let short_desc">
+            <p *ngIf="short_desc" class="short-desc">Veteran Form:<br><br>
+            the Vietnam Era Veterans’ Readjustment Assistance Act of 1974, as amended by the Jobs for Veterans Act of 2002, 38 U.S.C. 4212 (VEVRAA), which requires government contractors to take affirmative action to employ and advance in employment: (1) disabled veterans; (2) recently separated veterans; (3) active duty wartime or campaign badge veterans; and (4) Armed Forces service medal veterans. ...</p>
+            <p *ngIf="!short_desc">Veteran Form:<br><br>
+            the Vietnam Era Veterans’ Readjustment Assistance Act of 1974, as amended by the Jobs for Veterans Act of 2002, 38 U.S.C. 4212 (VEVRAA), which requires government contractors to take affirmative action to employ and advance in employment: (1) disabled veterans; (2) recently separated veterans; (3) active duty wartime or campaign badge veterans; and (4) Armed Forces service medal veterans. These classifications are defined as follows and are hereafter referred to all together as "protected veterans": A "disabled veteran" is one of the following: a veteran of the U.S. military, ground, naval or air service who is entitled to compensation (or who but for the receipt of military retired pay would be entitled to compensation) under laws administered by the Secretary of Veterans Affairs; or a person who was discharged or released from active duty because of a service-connected disability.<br><br>
+            A "recently separated veteran" means any veteran during the three-year period beginning on the date of such veteran’s discharge or release from active duty in the U.S. military, ground, naval, or air service.<br><br>
+            An "active duty wartime or campaign badge veteran" means a veteran who served on active duty in the U.S. military, ground, naval or air service during a war, or in a campaign or expedition for which a campaign badge has been authorized under the laws administered by the Department of Defense.<br><br>
+            An "Armed forces service medal veteran" means a veteran who, while serving on active duty in the U.S. military, ground, naval or air service, participated in a United States military operation for which an Armed Forces service medal was awarded pursuant to Executive Order 12985.<br><br>
+            *If you believe you belong to any of the categories of protected veterans listed above, please indicate by checking the appropriate box below. As a Government contractor subject to VEVRAA, we request this information in order to measure the effectiveness of the outreach and positive recruitment efforts we undertake pursuant to VEVRAA.<br><br>
+            Submission of this information is voluntary and refusal to provide it will not subject you to any adverse treatment. The information provided will be used only in ways that are not inconsistent with VEVRAA as amended. We are an equal opportunity employer. We do not discriminate in hiring or employment against any individual on the basis of race, color, gender, national origin, ancestry, religion, physical or mental disability, age, veteran status, sexual orientation, gender identity or expression, marital status, pregnancy, citizenship, or any other factor protected by anti-discrimination laws.</p>
+            <a (click)="short_desc = !short_desc">{{short_desc ? 'Read More' : 'Read Less'}}</a>
+          </ng-container>
+          <mat-divider></mat-divider>
+          <p>Response</p>
+          <div class="profile-form__field military-service">
+            <mat-form-field class="bg-transparent" appearance="fill">
+              <mat-label>Select Response</mat-label>
+              <mat-select (selectionChange)="militaryStatusChanged($event)" [value]="militaryService.military_status">
+                <mat-option *ngFor="let option of military_status_options" value="{{option}}">{{option}}</mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+        </div>
+
+        <div class="row">
+          <h3>Criminal History</h3>
+          <p>If you have ever been convicted of a misdemeanor or felony offense please provide the following information. Infractions maybe excluded. If you have never been convicted of such an offense, please leave this section blank.</p>
+      
+          <ng-container *ngIf="criminalHistoriesData.length > 0">
+            <mat-divider></mat-divider>
+            
+            <ng-container *ngFor="let history of criminalFormArray.controls; let i = index;" [formGroup]="criminalFormArray.at(i)">
+              <div class="profile-form__field">
+                <mat-form-field class="bg-transparent" appearance="fill">
+                  <mat-label>Charge</mat-label>
+                  <input matInput placeholder="Charge" type="text" formControlName="charge">
+                </mat-form-field>
+              </div>
+              <div class="profile-form__field"> 
+                <mat-form-field class="bg-transparent" appearance="fill">
+                  <mat-label>Arrest Date</mat-label>
+                  <input matInput placeholder="MM/DD/YYYY" type="text" formControlName="arrest_date" pattern="\d{1,2}/\d{1,2}/\d{4}">
+                  <input class="hide" [matDatepicker]="arrest_date" [max]="maxDate" (dateChange)="onChangeArrestDate($event, i)">
+                  <mat-datepicker-toggle matSuffix [for]="arrest_date"></mat-datepicker-toggle>
+                  <mat-datepicker
+                    touchUi
+                    #arrest_date
+                  >
+                  </mat-datepicker>
+                </mat-form-field>
+              </div>
+              <div class="profile-form__field textarea">
+                <mat-form-field>
+                  <textarea matInput placeholder="Explanation" rows="3" formControlName="explanation"></textarea>
+                </mat-form-field>
+              </div>
+              <div class="profile-form__field btn">
+                <action-button title="Remove" color="warn" (click)="onRemoveCriminalHistory(i)"></action-button>
+              </div>
+              <div class="profile-form__field border">
+              </div>
+            </ng-container>
+          </ng-container>
+          <div class="profile-form__field btn">
+            <action-button type="stroked" title="Add More" (click)="onAddCriminalHistory()" [disabled]="!(criminalFormArray.valid && checkChargeValidation())"></action-button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container__full">
+      <action-button class="btn-next" type="flat" title="Next" color="primary" (click)="goToNextPage()" [disabled]="!checkCriminalFormSkip() && !(criminalFormArray.valid && checkChargeValidation())"></action-button>
+    </div>
+  </div>
+  <!-- Add application template end -->
   
   <!-- Create_Profile_Status start -->
   
-  <div *ngIf="selectedPageIndex===9" class="container {{profileCreationPages[9]}}">
+  <div *ngIf="selectedPageIndex===10" class="container {{profileCreationPages[9]}}">
     <div class="container__full">
       <div class="profile-form">
         <h3 class="status__title">
