Update profile status setting button

--- a/client/src/app/pages/profile/create-profile/create-profile.component.html
+++ b/client/src/app/pages/profile/create-profile/create-profile.component.html
@@ -723,7 +723,8 @@
           SET YOUR STATUS
         </h3>
         <div class="profile-form__field simple-tag">
-          <simple-tag *ngFor="let status of statuses; let i = index" class="status" title="{{statuses[i]}}" onlineTag="true" [active]="profile_status === i" (click)="setProfileStatus(i)"></simple-tag>
+          <simple-tag class="status" title="{{statuses[profile_status]}}" onlineTag="true" [active]="profile_status === 1" (click)="setProfileStatus(profile_status === 0)"></simple-tag>
+          <!-- <simple-tag *ngFor="let status of statuses; let i = index" class="status" title="{{statuses[i]}}" onlineTag="true" [active]="profile_status === i" (click)="setProfileStatus(i)"></simple-tag> -->
         </div>
       </div>
     </div>
