--- a/client/src/app/pages/profile/user-profile/profile-section/profile-section.component.scss
+++ b/client/src/app/pages/profile/user-profile/profile-section/profile-section.component.scss
@@ -40,8 +40,14 @@
       font-weight: 600;
       font-size: 20px;
       line-height: 30px;
-      margin-bottom: 20px
+      margin-bottom: 20px;
+      display: inline-block;
     }
+      img{
+        margin-left: 8px;
+        vertical-align: text-bottom;
+      }
+    
     h4 {
       margin-top: 10px;
       &.name-field {
