Update profile section for other user profile pages

--- a/client/src/app/pages/profile/user-profile/profile-section/profile-section.component.html
+++ b/client/src/app/pages/profile/user-profile/profile-section/profile-section.component.html
@@ -1,7 +1,7 @@
 <ng-container>
 
   <div class="edit-title">
-    <a *ngIf="!editMode" (click)="onClickEdit()">Edit Profile</a>
+    <a *ngIf="!editMode && !userId" (click)="onClickEdit()">Edit Profile</a>
   </div>
 
   <div *ngIf="(userGeneralInfo && userGeneralInfo.user_intro) || editMode" class="row" [class.edit-mode]="editMode" id="about-me">
