CAR-000 Login page changes.

--- a/client/src/app/pages/authentication/login/login.component.html
+++ b/client/src/app/pages/authentication/login/login.component.html
@@ -5,6 +5,9 @@
       <p>
         yourCareerFair offers unparalleled, free, search and screening functionality for both applicants and recruiters. Using standardized user inputs as well as proprietary machine learning and AI algorithms, this platform is capable of comprehensively assessing the estimated compatibility of any user and position pair in real-time for users to see and utilize. In addition, yourCareerFair leverages this algorithm in its search process, allowing for applicants and recruiters to search for positions and applicants based on, in part, qualification level estimates and other pertinent metrics. For those who prefer a more traditional search, yourCareerFair also allows for searches filtered on other variables such as required skills, education, and title. Our hope is that these utilities are effective at attenuating the pernicious effects of labor market inefficiency and helping all people to find appropriate, engaging, and compatible employment.
       </p>
+      <p>
+        In short, yourCareerFair provides applicants with the utilities necessary to find positions they are most qualified for. This ensures more qualified applicants for each position, at zero cost for both recruiters as well as applicants, and faster speeds when compared to more traditional job boards.
+      </p>
       <a mat-button disableRipple="true" routerLink="/read-more">Read More</a>
     </div>
     <div class="row__copyright">
