--- a/client/src/app/components/add-skill-popup/add-skill-popup.component.html
+++ b/client/src/app/components/add-skill-popup/add-skill-popup.component.html
@@ -19,23 +19,25 @@
                 </mat-option>
               </mat-autocomplete>
             </mat-form-field>
+
+            <div *ngIf="skillFlag" class="skills">
+              <simple-tag type="gray" title="{{skillData.skill}}" ellipseTag="true" value="{{skillData.skill_level}}"
+                isControl="true" (levelChanged)="onJobLevelChanged($event)"
+                (removeClick)="removeExistingSkillsData(skillData)">
+              </simple-tag>
+            </div>
             <div *ngIf="temp_skill" class="skills">
               <simple-tag type="gray" title="{{temp_skill.skillItem.skill}}" ellipseTag="true" isControl="true"
                 value="{{temp_skill.skillItem.skill_level}}" (levelChanged)="onLevelChanged($event, temp_skill.index)"
                 (removeClick)="removeUserSkillsData(temp_skill.index, temp_skill.skillItem)"></simple-tag>
-              <!-- <mat-icon (click)="editSkillDone()">cancel</mat-icon> -->
+
             </div>
-            <div *ngIf="!temp_skill && userSkillsList.length > 0" class="skills">
-              <simple-tag *ngFor="let skillData of userSkillsList; let i = index" type="gray"
-                title="{{skillData.skill}}" ellipseTag="true" value="{{skillData.skill_level}}" isControl="true"
-                (levelChanged)="onLevelChanged($event, i)" (removeClick)="removeUserSkillsData(i, skillData)">
-              </simple-tag>
-            </div>
+
           </div>
         </div>
       </div>
-      <div class="nextButton" *ngIf="temp_skill">
-        <action-button class="btn-next" type="flat" title="Add" color="primary" (click)="editSkillDone()">
+      <div class="nextButton">
+        <action-button class="btn-next" type="flat" title="Add" color="primary" (click)="addSkills(skillData)">
         </action-button>
       </div>
     </div>
