--- a/client/src/app/components/add-skill-popup/add-skill-popup.component.scss
+++ b/client/src/app/components/add-skill-popup/add-skill-popup.component.scss
@@ -1,4 +1,4 @@
-@import './../../../styles/variables.scss';
+@import "./../../../styles/variables.scss";
 $container-mt-desktop: 70px;
 $container-mt-tablet: 50px;
 $container-mt-mobile: 35px;
@@ -11,105 +11,88 @@ $profile-form-max-width-desktop: 880px;
 $profile-form-padding-desktop: 60px;
 
 :host {
-    .cancel{
-      position: absolute;
-        top: 10px;
-        right: 10px;
-        color: #318bd6;
-   }
-   
-   .title {
+  .cancel {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    color: #318bd6;
+  }
+
+  .title {
     margin-top: $profile-form-field-mt;
     text-align: center;
   }
 
-   & mat-dialog-content{
-       
-  
-  .container {
-    &__full {
-      grid-column-start: 1;
-      grid-column-end: 13;
-      
-      
-    }
-    .profile-form {
-      action-button {
-        min-width: 150px;
+  & mat-dialog-content {
+    .container {
+      &__full {
+        grid-column-start: 1;
+        grid-column-end: 13;
       }
-      &__title {
-        margin-top: $profile-form-field-mt;
-        text-align: center;
-      }
-      .mat-form-field{
-        width: 100%;
-      }
-    
+      .profile-form {
+        action-button {
+          min-width: 150px;
+        }
+        &__title {
+          margin-top: $profile-form-field-mt;
+          text-align: center;
+        }
+        .mat-form-field {
+          width: 100%;
+        }
 
-    &__field {
-      margin-top: $profile-form-field-mt;
-      box-sizing: border-box;
-      width: 80%;
-      max-width: 615px;
-      border: solid 1px $mat-form-border-color;
-      border-radius: 5px;
-      padding: 0;
-      &.search {
-        border: none;
-        padding: 0;
-        h3 {
-          color: rgba(map-get($md-cfaccent, 500), 0.84);
-        }
-        .count {
-          font-size: 14px;
-          font-weight: 400;
-        }
-        mat-form-field {
-          margin-top: 10px;
-          background-color: $third-bg-color;
-          border-radius: 25px;
-        }
-        .skills {
-          margin-top: 10px;
-          @include flex(row, center, flex-start);
-          & > *  {
-            margin-top: 20px;
-            margin-right: 15px;
+        &__field {
+          margin-top: $profile-form-field-mt;
+          box-sizing: border-box;
+          width: 80%;
+          max-width: 615px;
+          border: solid 1px $mat-form-border-color;
+          border-radius: 5px;
+          padding: 0;
+          &.search {
+            border: none;
+            padding: 0;
+            h3 {
+              color: rgba(map-get($md-cfaccent, 500), 0.84);
+            }
+            .count {
+              font-size: 14px;
+              font-weight: 400;
+            }
+            mat-form-field {
+              margin-top: 10px;
+              background-color: $third-bg-color;
+              border-radius: 25px;
+            }
+            .skills {
+              margin-top: 10px;
+              @include flex(row, center, flex-start);
+              & > * {
+                margin-top: 20px;
+                margin-right: 15px;
+              }
+              mat-icon {
+                color: map-get($md-cfaccent, 100);
+              }
+            }
           }
-          mat-icon {
-            color: map-get($md-cfaccent, 100);
+          &.simple-tag {
+            border: none;
+            @include flex(column, center, center);
+            simple-tag {
+              margin: 10px 0;
+            }
           }
         }
       }
-      &.simple-tag {
-        border: none;
-        @include flex(column, center, center);
-        simple-tag {
-          margin: 10px 0;
+      .nextButton {
+        action-button.btn-next {
+          min-width: 130px;
+          position: relative;
+          /* top: 10%; */
+          left: 15%;
         }
       }
     }
-  }
-     .nextButton  {
-    action-button.btn-next {
-      min-width: 130px;
-      position: relative;
-      /* top: 10%; */
-      left: 15%;
-    }
-  
-  }
-
   }
 }
-}
-
-
-
-
-
-      
-      
-   
-
-   
