--- a/client/src/app/pages/people/people-search/people-search.component.scss
+++ b/client/src/app/pages/people/people-search/people-search.component.scss
@@ -9,7 +9,7 @@ $profile-form-field-mt: 30px;
     display: table;
 
     .comman_search_filter {
-      .postion-search-header {
+      .people-search-header {
         background-color: $white;
         border: 1px solid #ddd;
         padding: 12px 10px;
@@ -38,74 +38,25 @@ $profile-form-field-mt: 30px;
           position: absolute;
           color: rgba(map-get($md-cfaccent, 500), .34);
         }
-
       }
 
       .filter-data {
         & .filter_icon {
           display: none;
         }
-
       }
     }
 
-    .position-main-container {
+    .people-main-container {
       background-color: $bg-color-1;
       display: table;
       width: 94%;
       margin: 0 auto;
 
-
-      .position-list-container {
-
+      .people-list-container {
         float: right;
         width: 70.3%;
         padding-bottom: 80px;
-
-        & .select-style {
-          overflow: hidden;
-          margin-bottom: 9px;
-
-          & .sort-item {
-            color: rgba(map-get($md-cfaccent, 500), .44);
-            font-size: 14px;
-            font-family: "Poppins", sans-serif;
-            font-weight: 400;
-
-            & mat-form-field {
-              margin-top: -10px;
-              margin-bottom: 5px;
-              width: 123px;
-              font-family: "Poppins", sans-serif;
-              font-weight: 400;
-
-            }
-          }
-
-          & .selectall {
-            float: left;
-            width: 70%;
-
-            & round-checkbox {
-              display: inline;
-              margin-right: 22px;
-
-            }
-
-            & .drop-buttons {
-              display: none;
-            }
-          }
-
-          & action-button {
-            @include inline-block-btn;
-            margin-right: 2%;
-          }
-        }
-
-        & .sort-item {
-          float: right;
-        }
 
         .row {
           background: $white;
@@ -114,279 +65,62 @@ $profile-form-field-mt: 30px;
           margin-bottom: 5px;
           border-radius: 5px;
 
-          & .qualification-level-m {
-            margin-top: 20px;
-
-            h5 {
-              font-family: 'Helvetica Neue';
-            }
-
-            p {
-              margin-top: 0px;
-
-            }
-          }
-
-          &.selected {
-            background-color: $selected-bg-color;
-          }
-
-          &.no-job {
+          &.no-people {
             @include btn-align-center;
           }
 
-          & round-checkbox {
-            @include inline-block-btn;
-            vertical-align: middle;
-          }
-
-          h1 {
-            @include inline-block-btn;
-            vertical-align: middle;
-            margin-bottom: 1px;
-            font-size: 30px;
-            line-height: 46px;
-            color: rgba(map-get($md-cfaccent, 500), .84);
-            margin-top: 0;
-            font-family: "Poppins", sans-serif;
-            cursor: pointer;
-            font-weight: 600;
-          }
-
-          & .position-right {
-            float: right;
-
-            & .heart-icon {
-              text-align: center;
-              margin: 0 auto 0;
-              display: inline-block;
-              width: 50px;
-              vertical-align: top;
-              height: 46px;
-
-              img {
-                &.before-heart-icon {
-                  margin-top: 14px;
-                }
-              }
-            }
-
-            vertical-align: middle;
-
-            & .dot-icon {
-              img {
-                margin: 0 0 0 15px;
-              }
-            }
-          }
-
-          img {
-            vertical-align: middle;
-            margin-right: 8px;
-          }
-        }
-
-        & .mat-icon {
-          vertical-align: middle;
-          margin-right: 20px;
-        }
-
-        h5 {
-          margin-bottom: 5px;
-          font-size: 14px;
-          line-height: 21px;
-          color: rgba(map-get($md-cfaccent, 500), .34);
-          font-weight: 400;
-          margin-top: 0;
-          font-weight: 400;
-
-
-
-          span {
-            display: inline-block;
-            margin-left: 4px;
-            color: rgba(map-get($md-cfaccent, 500), .84);
-          }
-        }
-
-        p {
-          margin-top: 10px;
-          margin-bottom: 10px;
-          font-size: 14px;
-          line-height: 22px;
-          font-weight: 400;
-          max-height: 310px;
-          width: 95%;
-          -webkit-box-orient: vertical;
-          display: block;
-          display: -webkit-box;
-          -webkit-line-clamp: 14;
-          overflow: hidden;
-          /* autoprefixer: ignore next */
-          -webkit-box-orient: vertical;
-          text-overflow: ellipsis;
-        }
-
-        & .right-align {
-          @include inline-block-btn;
-
-          vertical-align: middle;
-        }
-
-        & .job-top-list {
-          ul {
-            padding: 0;
-            margin-top: 0;
-            margin-bottom: 0px;
-
-
-            li {
-              list-style: none;
-              @include inline-block-btn;
-              margin-right: 100px;
-              font-size: 14px;
-              line-height: 16px;
-              vertical-align: middle;
-              font-family: "Poppins", sans-serif;
-              font-weight: 400;
-
-              a {
-                @include inline-block-btn;
-                vertical-align: middle;
-                color: rgba(map-get($md-cfaccent, 500), .84);
-                text-decoration: none;
-              }
-
-              span {
-                @include inline-block-btn;
-                vertical-align: middle;
-                color: rgba(map-get($md-cfaccent, 500), .84);
-              }
-
-              img {
-                margin-right: 5px;
-                vertical-align: middle;
-              }
-            }
-          }
-        }
-
-        & .main-card {
-          ul {
-            padding: 0;
-            margin: 0;
-
-            li {
-              list-style: none;
-              @include inline-block-btn;
-              width: 49%;
-              vertical-align: top;
-
-              ul {
-                margin-top: 0;
-
-                li {
-                  font-size: 14px;
-                }
-              }
-
-              .skills-preferred-m {
-                @include inline-block-btn;
-                margin: 0 5px 7px 0;
-
-                & simple-tag {
-                  font-family: "Poppins", sans-serif;
-                  color: rgba(map-get($md-cfaccent, 500), .05);
-                }
-              }
-
-              & .skil-height-fix {
-                overflow: hidden;
-                max-height: 45px;
-
-                &.skill-more-height {
-                  max-height: 135px;
-                }
-              }
-
-
-            }
-          }
-        }
-
-        & .show-button {
-          text-align: center;
-
-          action-button {
-            display: inline-block;
-            position: relative;
-            cursor: pointer;
-
-            &::after {
-              position: absolute;
-              right: -47px;
-              color: rgba(0, 29, 64, 0.1);
-              height: 100%;
-              width: 100%;
-              content: "|";
-              top: 20px;
-            }
-
-            &:last-child::after {
-              display: none;
-            }
-
-            &:focus {
-              outline: none;
-            }
-          }
-        }
-
-        & .qualification-level-m {
-          & simple-tag {
-            @include inline-block-btn;
-            margin: 12px 5px 22px 0px;
-            font-family: "Poppins", sans-serif;
-            font-weight: 400;
-          }
-
-        }
-
-        & .card {
-          margin: 20px 0;
-
-          & mat-grid-tile {
-            border: 1px solid #f0f0f0;
-            border-right: none;
-
-            &:last-child {
-              border-right: 1px solid #f0f0f0;
-            }
-          }
-
-          & .card-item {
-            @include inline-block-btn;
+          .header-container {
             width: 100%;
-            padding: 9px 15px 9px 15px;
-            vertical-align: middle;
+            margin-bottom: 20px;
+            @include flex(row, flex-start, space-between);
 
+            action-button {
+              margin-top: 10px;
+            }
+          }
 
-            span {
-              color: rgba(map-get($md-cfaccent, 500), .44);
-              font-size: 14px;
-              font-family: "Poppins", sans-serif;
+          .sub-container {
+            width: 100%;
+            margin-bottom: 20px;
+            display: inline-flex;
+            flex-wrap: wrap;
+          }
+
+          .skills-container {
+            width: 100%;
+            margin-bottom: 20px;
+
+            h5 {
+              margin-top: 0;
+              margin-bottom: 0;
+              font-family: 'Poppins-Regular', sans-serif;
               font-weight: 400;
+              font-style: normal;
+              font-size: 14px;
+              line-height: 21px;
+              color: rgba(map-get($md-cfaccent, 500), .34);
+
+              span.count {
+                color: rgba(map-get($md-cfaccent, 500), .84);
+              }
             }
 
-            p {
-              margin: 3px 0 0;
-              font-size: 14px;
-              line-height: 16px;
+            .skills {
+              @include flex(row, center, flex-start);
+
+              img {
+                width: 30px;
+                height: 30px;
+                margin: 10px 0 5px 10px;
+                cursor: pointer;
+              }
+
+              simple-tag {
+                margin: 10px 10px 5px 0;
+              }
             }
           }
         }
-
-
       }
 
       .pagination {
@@ -396,7 +130,6 @@ $profile-form-field-mt: 30px;
           padding: 3px 10px;
           border-radius: 50px;
           background-color: map-get($md-cfgray, 500);
-          ;
           @include inline-block-btn;
 
           li {
@@ -433,8 +166,6 @@ $profile-form-field-mt: 30px;
           }
         }
       }
-
-
     }
 
     .filter-container {
@@ -488,7 +219,6 @@ $profile-form-field-mt: 30px;
         border-radius: 5px;
         margin-bottom: 2px;
 
-
         & mat-select {
           font-size: 14px;
           font-family: "Poppins", sans-serif;
@@ -503,7 +233,6 @@ $profile-form-field-mt: 30px;
               }
             }
           }
-
         }
 
         & simple-tag {
@@ -535,8 +264,80 @@ $profile-form-field-mt: 30px;
     @include flex(column, center, center);
   }
 
+  .user-info {
+    display: grid;
+    grid-template:
+      " image info "auto / 60px 200px;
+    ;
+    grid-column-gap: 10px;
+    background-color: transparent;
+    margin-right: 10px;
+    margin-bottom: 10px;
 
+    .image {
+      grid-area: image;
+      @include flex(row, center, flex-start);
 
+      &>img {
+        width: 60px;
+        height: 60px;
+        border-radius: 50%;
+      }
+
+      &.secondary {
+        @include flex(row, flex-start, flex-start);
+
+        &>img {
+          width: 56px;
+          height: 56px;
+          border-radius: 0;
+        }
+      }
+    }
+
+    .info {
+      grid-area: info;
+      width: 100%;
+      @include flex(column, flex-start, center);
+
+      h2.name {
+        font-family: 'Poppins-Semibold', sans-serif;
+        font-weight: 600;
+        font-size: 30px;
+        line-height: 43px;
+        color: rgba(map-get($md-cfaccent, 500), .84);
+        margin: 0;
+      }
+
+      h3.title {
+        font-family: 'Poppins-Medium', sans-serif;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 23px;
+        color: rgba(map-get($md-cfaccent, 500), .84);
+        margin: 0;
+      }
+
+      h4.secondary-title {
+        font-family: 'Roboto', sans-serif;
+        font-weight: 500;
+        font-style: normal;
+        font-size: 16px;
+        line-height: 21px;
+        color: rgba(map-get($md-cfaccent, 500), .84);
+        margin: 0;
+      }
+
+      h5.secondary-title {
+        font-family: 'Poppins-Medium', sans-serif;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 20px;
+        color: rgba(map-get($md-cfaccent, 500), .34);
+        margin: 0;
+      }
+    }
+  }
 }
 
 
@@ -550,7 +351,7 @@ $profile-form-field-mt: 30px;
         margin: 0 auto 12px;
         background-color: $white;
 
-        .postion-search-header {
+        .people-search-header {
           display: block;
           border: none;
           width: 560px;
@@ -577,12 +378,10 @@ $profile-form-field-mt: 30px;
             cursor: pointer;
           }
         }
-
       }
 
-      .position-main-container {
+      .people-main-container {
         width: 100%;
-
 
         & .container__header {
           &.tablet {
@@ -627,44 +426,12 @@ $profile-form-field-mt: 30px;
           }
         }
 
-        .position-list-container {
+        .people-list-container {
           float: none;
           width: 95%;
           margin: 0 auto;
           padding-top: 10px;
-
-          & .select-style {
-            & .selectall {
-              width: 64%;
-
-              & action-button {
-                margin-bottom: 5px;
-              }
-            }
-          }
-
-          & .row {
-            h1 {
-              font-size: 26px;
-            }
-
-            & .job-top-list {
-              ul {
-                margin-top: 0% li {
-                  margin-right: 70px;
-                }
-              }
-            }
-
-            & .card {
-              & .card-item {
-                width: 100%;
-              }
-            }
-
-          }
         }
-
       }
     }
   }
@@ -682,7 +449,7 @@ $profile-form-field-mt: 30px;
         margin: 0 auto 12px;
         background-color: $white;
 
-        .postion-search-header {
+        .people-search-header {
           display: block;
           border: none;
           width: 450px;
@@ -708,12 +475,10 @@ $profile-form-field-mt: 30px;
             display: block;
             cursor: pointer;
           }
-
-
         }
       }
 
-      .position-main-container {
+      .people-main-container {
         width: 100%;
 
         & .container__header {
@@ -759,7 +524,7 @@ $profile-form-field-mt: 30px;
           }
         }
 
-        .position-list-container {
+        .people-list-container {
           float: none;
           width: 95%;
           margin: 0 auto;
@@ -774,18 +539,6 @@ $profile-form-field-mt: 30px;
 
               & action-button {
                 margin-bottom: 5px;
-              }
-            }
-          }
-
-          .row {
-            h1 {
-              font-size: 26px;
-            }
-
-            .card {
-              .card-item {
-                width: 100%;
               }
             }
           }
@@ -807,7 +560,7 @@ $profile-form-field-mt: 30px;
         margin: 0 auto 12px;
         background-color: $white;
 
-        .postion-search-header {
+        .people-search-header {
           display: inline-block;
           border: none;
           width: 76%;
@@ -837,7 +590,7 @@ $profile-form-field-mt: 30px;
         }
       }
 
-      .position-main-container {
+      .people-main-container {
         width: 100%;
         padding-bottom: 100px;
 
@@ -884,137 +637,35 @@ $profile-form-field-mt: 30px;
           }
         }
 
-        .position-list-container {
+        .people-list-container {
           float: none;
           width: 92%;
           margin: auto;
           padding: 0 10px;
 
-          & .select-style {
-            & .selectall {
-              float: none;
-              width: 100%;
-
-              & round-checkbox {
-                margin-right: 13px;
-              }
-
-              & action-button {
-                margin-bottom: 5px;
-                display: none;
-              }
-
-              & .drop-buttons {
-                display: inline-block;
-
-              }
-            }
-
-            & .sort-item {
-              float: none;
-              margin-left: 30px;
-
-              & mat-form-field {
-                margin-top: 0px;
-                margin-bottom: 5px;
-                margin-left: 30px;
-
-              }
-            }
-          }
-
-          & .right-align {
-            @include inline-block-btn;
-            text-align: center;
-
-            & action-button {
-              @include inline-block-btn;
-            }
-          }
-
           & .row {
             padding: 25px 10px;
-
-            h1 {
-              font-size: 18px;
-              margin-top: 3px;
-              line-height: 20px;
-              width: 86%;
-              overflow: hidden;
-              text-overflow: ellipsis;
-              white-space: nowrap;
-              // margin-bottom: 18px;
-            }
-
-            & .position-right {
-              margin-left: 10px;
-              float: none;
-              padding-top: 16px;
-
-              & .heart-icon {
-                margin: 8px auto 0;
-                width: 81px;
-
-                img {
-                  &.before-heart-icon {
-                    margin-top: 6px;
-                  }
-
-                  &.after-heart-icon {
-                    margin-top: -8px;
-                  }
-                }
-              }
-            }
-
-            & .job-top-list {
-              ul {
-                margin: 20px auto 0;
-
-                li {
-                  margin-right: auto;
-                  font-size: 13px;
-                  margin-bottom: 6px;
-                  word-wrap: break-word;
-                  display: block;
-                }
-              }
-            }
-
-            & .card {
-              & .card-item {
-                padding: 18px 5px 12px 5px;
-                min-height: 60px;
-
-                & span {
-                  font-size: 13px;
-                }
-              }
-            }
-
-            .main-card {
-              ul {
-                li {
-                  width: 100%;
-                }
-              }
-            }
           }
-
-          & .qualification-level-m {
-            & simple-tag {
-              @include inline-block-btn;
-              margin: 0px 5px 7px 0px;
-              font-family: "Poppins", sans-serif;
-              font-weight: 400;
-            }
-
-          }
-
-
         }
 
       }
     }
   }
+}
+
+@media only screen and (max-width: 576px) {
+  :host {
+    .career-main {
+      .people-main-container {
+        .people-list-container {
+          & .row {
+            .header-container {
+              @include flex(column, center, flex-start);
+            }
+          }
+        }
+      }
+    }
+  }
+  
 }
